# nibe-mqtt-gateway

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
config/: config.json.template
main/: CMakeLists.txt  HTTPUpdateServer.h  KMPProDinoESP32.cpp  KMPProDinoESP32.h  MCP23S08.cpp  MCP23S08.h  Relay.cpp  Relay.h  config.cpp  config.h  configmgr.cpp  configmgr.h  energy_meter.cpp  energy_meter.h  idf_component.yml  main.cpp  metrics.cpp  metrics.h  mqtt.cpp  mqtt.h  mqtt_helper.cpp  mqtt_helper.h  mqtt_logging.cpp  mqtt_logging.h  nibegw.cpp  nibegw.h  nibegw_config.cpp  nibegw_config.h  nibegw_mqtt.cpp  nibegw_mqtt.h  nibegw_rs485.cpp  nibegw_rs485.h  nonstd_stream.cpp  nonstd_stream.h  web.cpp  web.h
test/: CMakeLists.txt  idf_component.yml  main.c  mqtt_mock.cpp  mqtt_mock.h  prodino_mock.cpp  test_config.cpp  test_configmgr.cpp  test_metrics.cpp  test_mqtt_helper.cpp  test_nibegw.cpp  test_nibegw_config.cpp  test_nonstd_stream.cpp  test_relay.cpp
test/fake_header/: mqtt_client.h
test/fake_header/freertos/: ringbuf.h
